改进了WebOSGi启动机制，增加了config.ini中配置host和context path后，框架自动启动的功能。原来需要第一次http请求时启动web bundles.

--- a/org.emrys.webosgi.launcher.jee/launcher/WEB-INF/framework/configuration/config.ini
+++ b/org.emrys.webosgi.launcher.jee/launcher/WEB-INF/framework/configuration/config.ini
@@ -3,3 +3,8 @@
 osgi.bundles=reference\:file\:org.eclipse.equinox.servletbridge.extensionbundle_1.0.0.jar@1,reference\:file\:org.emrys.webosgi.launcher.configurator_1.0.0.jar@1\:start
 org.emrys.webosgi.launcher.configurator.configUrl=file\:bundles.info
 osgi.bundles.defaultStartLevel=4
+
+# The web container's host and context path setting. 
+# If not set, the first http request will bring this information and WebOSGi fwk will work in lazy-start mode.
+#webosgi.host=http://localhost:8080
+#webosgi.contextPath=/launcher
