对OSGi embedded模式下的自动启动web bundles机制进行了改进。兼容domino和普通的OSGi环境两种方式。这两者区别在于Bridge Servlet init方法是否在OSGi启动时调用。

--- a/org.emrys.webosgi.launcher.jee/launcher/WEB-INF/framework/configuration/config.ini
+++ b/org.emrys.webosgi.launcher.jee/launcher/WEB-INF/framework/configuration/config.ini
@@ -4,7 +4,8 @@ osgi.bundles=reference\:file\:org.eclipse.equinox.servletbridge.extensionbundle_
 org.emrys.webosgi.launcher.configurator.configUrl=file\:bundles.info
 osgi.bundles.defaultStartLevel=4
 
-# The web container's host and context path setting. 
+# The web container's host and context path setting for WebOSGi start web bundles in auto-start mode.
 # If not set, the first http request will bring this information and WebOSGi fwk will work in lazy-start mode.
 #webosgi.host=http://localhost:8080
+# If WebOSGi embedded in OSGi runtime, contextPath setting will be ignored.
 #webosgi.contextPath=/launcher
